build(core): dev run via exec:exec so the bot really starts in fluxcord-core/run/
exec:java runs in-process and silently ignores <workingDirectory>: the bot
started at the repository root and created config.yml and logs/ there.
exec:exec forks a JVM in run/ with logback-dev.xml and native access enabled.
Document the smoke-test procedure (stdin 'shutdown' for the clean path,
expected log sequence, health endpoints).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>